
2008-12-28:
Fixed some bugs with displaying zero values related to infinity and NaN.

2009-01-14:
Fixed bug with reloading sheet with font settings.

2009-01-15:
First implementation of movepaste/moveinsert done.
Added swapcolors button to socialcalcspreadsheetcontrol.js.

2009-02-02:
Changed to SocialCalc.Callbacks.expand_wiki which takes subtypes.
Implemented demo samples of text-wiki-pagelink.

2009-02-05:
Added SocialCalc.Formula.RemoteFunctionInfo.waitingForServer to help handling RPC.
Fixed recalc off not recalculating positions in case cell got different size.

2009-02-20:
Created socialcalcpopup.js and changed socialcalcspreadsheetcontrol.js to use it.


TO DO:

Handle unknown function better - should be error message but propogate OK.
Handle bad settings
Make sure insert/delete row/col and move handle name coord changing undo.
Need some way to abort recalc -- like pressing Esc?


Limit undo size?
1 row scroll of high cells doesn't update row height values or something -
 scroll in Merges and Scrolling when 2 panes -- may be dragging when scrolled
 doesn't know trying to set too far: check test
Bug in SocialCalc.pm: adjust_formula_coords refs to deleted cells -- doesn't handle multiple
Bug in Sheet.pm: test_criteria tests "value" instead of "type" for left error
Check SheetFunctions.pm: Dseries with criteria of "0" -- checks for blank as !criteria, not length
 Also, see double testcol setting.
INDEX function (and range return from evaluate polish) does not handle other sheets.
 Make DecodeRangeParts get that stuff to make it easy?
Bug in SheetFunctions.pm: StringFunctions error doesn't return right away
 RIGHT has -1 args?
 InterestFunctions: should be -3 args?
 IRR check for values?
Bug in Sheet.pm: evaluate_parsed_formula return of range doesn't swap sheetname!coord
Sheet.ResetSheet doesn't seem to work well -- it does not recalc or redisplay well afterward
